2004-03-25  Juri Linkov  <juri@jurta.org>

	* descr-text.el (describe-property-list): Add a button
	for `face' property that calls `describe-face'.
	Suggested by luis fernandes <elf@ee.ryerson.ca>

	* international/mule.el (keyboard-coding-system):
	* kmacro.el (kmacro-call-macro): Fix docstring.

	* dired.el: Fix comments.

	* textmodes/fill.el (fill): Fix Info link.

	* font-lock.el (fast-lock, lazy-lock):
	* jit-lock.el (jit-lock): Remove links to removed Support Modes
	Info node.

	* info-xref.el: Fix commentary.

2004-03-25  Kevin Ryde  <user42@zip.com.au>

	* info-xref.el (info-xref-check-buffer): Report empty filename parts.
	Remove spurious node duplicate suppression, doesn't work, not wanted.
	(info-xref-output): Take format style args, add "sit-for 0" to let
	user see the results as they progress.
	(info-xref-check-all-custom): New function.

2004-03-25  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el: Moved to progmodes.

2004-03-24  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/appt.el (appt-check): Remove superfluous progn.
	When finished with diary buffer: if it was not being displayed
	before, kill it; otherwise restore its original state.
	Suggested by Matthew Mundell <matt@mundell.ukfsn.org>.

	* calendar/calendar.el (calendar-set-mode-line): Use total
	available mode-line width, rather than frame-width.

	* calendar/diary-lib.el (fancy-diary-display): Set mode-line
	after mode change so effect not lost.

2004-03-23  Dave Love  <fx@gnu.org>

	* dired.el (dired) <defgroup>: Add link to manual.
	(dired-font-lock-keywords): Add highlighting on unusual permissions.
	(dired-revert): Use dolist.
	(dired-mode-map): Add U binding.
	(dired-mode): Add font-lock-beginning-of-syntax-function.
	(dired-garbage-files-regexp): Make it a defcustom.

2004-03-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-arch.el (vc-arch-diff): Handle the special case where `newvers'
	is equivalent to nil.